tests/compile-fail/cases/tainted_as_ref_str.stderr
error[E0599]: no method named `as_ref` found for struct `Tainted<T>` in the current scope
 --> cases/tainted_as_ref_str.rs:8:16
  |
8 |     http_get(t.as_ref());
  |                ^^^^^^ method not found in `Tainted<Vec<u8>>`
